--- a/src/components/View-Algorithm/viewAlgorithm.css
+++ b/src/components/View-Algorithm/viewAlgorithm.css
@@ -80,6 +80,11 @@ main {
   color: #4D4949;
   font-family: 'Lato', sans-serif;
   font-size: 0.9rem;
-  line-height: 1.2rem;
+  line-height: 1.5rem;
+}
 
+@media screen and (max-width: 500px) {
+  .extraInfo {
+    display: none;
+  }
 }
